# EmergencyRoom

./: CMakeLists.txt  EmergencyRoom.cpp  EmergencyRoom.h  Patient.cpp  Patient.h  README.md  main.cpp
