cmake_minimum_required(VERSION 3.26)
project(EmergencyRoom)

set(CMAKE_CXX_STANDARD 17)

add_executable(EmergencyRoom main.cpp
        EmergencyRoom.h
        EmergencyRoom.cpp
        Patient.h
        Patient.cpp
        ../../UIC_DOC/fall2023/CS251/priority_queue/prqueue.h
        ../../UIC_DOC/fall2023/CS251/priority_queue/prqueue.h
        ../../UIC_DOC/Fall2023/CS251/priority_queue/prqueue.h
        ../../UIC_DOC/Fall2023/CS251/priority_queue/prqueue.h)
